--- a/main.css
+++ b/main.css
@@ -1,24 +1,40 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
     margin : 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+header, footer {
+    text-align: center;
+}
+
+main {
+    width: 100%;
+    max-width: 1000px;
+    display: grid;
+    grid-area: 1fr;
 }
 
 article {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    max-width: 800px;
 }
 
 #playGround {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     gap: 5px;
 }
@@ -31,6 +47,7 @@ article {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 10%;
 
     -webkit-user-select: none;
     user-select: none;
